<resources>
    <string name="app_name">HighEnergyMind</string>
    <string name="your_key_to_happiness_and_success">Your Key to Happiness and Success</string>
    <string name="imagine_an_app_that">Be inspired by positive affirmations to help you achieve your goals. Listen to silent subliminals and get new impulses for your subconscious mind. With the HighEnergyMind app, you hold the key to more happiness and success.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_and_conditions_privacy_policy_n_disclaimer_restore_purchase">Terms and conditions | Privacy policy \n Disclaimer | Restore Purchase</string>
    <string name="the_power_of_positive_affirmations">The Power of Positive Affirmations</string>
    <string name="positive_affirmations_are_">Affirmations are more than just positive statements. They have the power to make profound changes in your life. By regularly listening to and reading these empowering messages, you can reduce anxiety, increase your self-confidence, and become happier.</string>
    <string name="your_daily_companion_for_a_n_fulfilling_life">Your Daily Companion to a\nFulfilled Life</string>
    <string name="discover_our_extensive_">Discover our extensive library of positive affirmations now. Receive daily personal reminders that inspire, motivate and support you to master your everyday life with confidence. Start now and discover your true potential.</string>
    <string name="whether_you_are_looking_">Explore our extensive library of positive affirmations and silent subliminals. Receive daily personalized reminders to help you create the life you want. Start now and discover your true potential.</string>
    <string name="discover_your_true_potential">Discover Your True Potential</string>
    <string name="continue_to_explore">Continue to Explore</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="wel_come">Welcome home</string>
    <string name="log_in_now_to_stay_on_track_and_unlock_exclusive_features">Log in now to access all content and unlock exclusive features.</string>
    <string name="emial">Email</string>
    <string name="example_gmail_com"> yourname@email.com</string>
    <string name="password">Password</string>
    <string name="or_login_with">Or log in with</string>
    <string name="don_t_have_an_account_sign_up">
Don\'t have an account?
<b>Sign up now</b>
</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="apple">Apple</string>
    <string name="google">Google</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="enter_your_email_you_will_receive_an_otp_for_creating_new_password">Enter your email address and you will receive a one-time code to create a new password.</string>
    <string name="submit">Submit</string>
    <string name="enter_the_code_sent_to_your_registered_email">Enter the code sent to your email address.</string>
    <string name="email_verification">Email Verification</string>
    <string name="verify">Verify</string>
    <string name="didn_t_received_the_otp">Didn\'t receive the code?</string>
    <string name="resend_otp">Resend code</string>
    <string name="reset_password">Reset your password</string>
    <string name="please_enter_your_new_password_and_confirm_new_password">Please enter your new password and\nconfirm your new password.</string>
    <string name="hello">Hello, my name is Anna</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="personal_details">Welcome</string>
    <string name="please_enter_your_personal_details">We customize the app to your individual needs. Please introduce yourself briefly.</string>
    <string name="enter_your_first_name">Your first name</string>
    <string name="alex">Anna</string>
    <string name="select_your_gender">I am...</string>
    <string name="your_age">Your Age</string>
    <string name="_30_49">30-49</string>
    <string name="conti">Continue</string>
    <string name="tell_us_what_brings_you_here">Tell us what brings you here</string>
    <string name="select_a_category_that_matches_your_needs">Based on your selection, you will receive personalized suggestions in the app.</string>
    <string name="select_at_least_one_to_continue">Please select at least one category to continue. You can change your selection at any time.</string>
    <string name="select_at_least_one_to_category">Please select at least one category.</string>
    <string name="explore_empowering_affirm">
Discover empowering\naffirmations for
<font fgcolor="#1A6785"> your body,</font>
 \n
<font fgcolor="#1A6785">mind, and spirit</font>
</string>
    <string name="select_at_least_one_category">Please select at least one category.</string>
    <string name="category">Category</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="affirmation">Affirmations</string>
    <string name="account">Account</string>
    <string name="see_all">See all</string>
    <string name="last_tracks_of_affirmations">Last played</string>
    <string name="self_love">Self-love</string>
    <string name="recommendation">Recommended for you</string>
    <string name="playlist_of_the_month">New Tracks</string>
    <string name="popular_tracks">Popular Tracks</string>
    <string name="books">Feel like reading?</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry">Just so you know, everything in the entire universe is always about love, and when it isn\'t about love, it is about the absence of love.</string>
    <string name="share_the_app">Share the App</string>
    <string name="review_the_app">Review the App</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="recent">Recent</string>
    <string name="categories">Categories</string>
    <string name="music">Music</string>
    <string name="popular_content">Popular right now</string>
    <string name="curated_to_you">Recommended for you</string>
    <string name="subscription_plan">Subscription Plan</string>
    <string name="favorite">Favorites</string>
    <string name="go_premium">Start your free 7-day trial now!</string>
    <string name="invite_your_friends">Invite your friends</string>
    <string name="redeem_code">Redeem a code</string>
    <string name="rate_us_in_app_store">Rate HighEnergyMind on the App Store</string>
    <string name="reminders">Manage reminders</string>
    <string name="manage_categories">Manage categories</string>
    <string name="audio_settings">Audio Settings</string>
    <string name="faqs">Frequently Asked Questions</string>
    <string name="about_us">About Us</string>
    <string name="feedback_support">Send us feedback</string>
    <string name="suggest_an_affirmation">Suggest an affirmation</string>
    <string name="follow_us">Follow HighEnergyMind</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="imprint">Imprint</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="affirmations_in_this_track">Affirmations in this track</string>
    <string name="notification">Notifications</string>
    <string name="read">&#160;&#160;&#160;&#160;Read&#160;&#160;&#160;&#160;</string>
    <string name="unread">&#160;&#160;&#160;&#160;Unread (%d)&#160;&#160;&#160;&#160;</string>
    <string name="set_reminder">Manage reminders</string>
    <string name="affirmations_work_better_if_we_use_them_every_day_here_you_can_set_how_often_you_want_to_receive_push_notifications_with_affirmations">Affirmations work better if we repeat them regularly and use them every day. Here you can set how often you want to receive push notifications with personalized affirmations.</string>
    <string name="start_time">Start Time</string>
    <string name="repeat_on_specific_day">Remind me on the following days</string>
    <string name="how_many_times">Frequency</string>
    <string name="end_time">End Time</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="language">Language</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="select_all_the_affirmation_categories_you_want_to_recieve_from">Select all the categories from which you would like to receive affirmations.</string>
    <string name="in_what_areas_of_success_motivation_would_you_prefer_to_receive_affirmations">Which topics from the category <font fgcolor="#1A6785">Success &amp; Motivation</font> are you interested in?</string>
    <string name="save_selection">Save Selection</string>
    <string name="hello_alex_nregister_to_get_started">Hello Anna,\nregister to get started</string>
    <string name="create_an_account_by_filling_in_the_information_below">Create an account by filling out the information below.</string>
    <string name="sign_up">Sign up now</string>
    <string name="unlock_affirmations">Unlock all Affirmations and Categories</string>
    <string name="unlock_500_guided_affirmation_tracks">Unlock all Premium Music</string>
    <string name="unlock_40_premium_beats">Unlock all Wallpapers and Themes</string>
    <string name="unlock_all_backgrounds_and_styles">DELETE ME</string>
    <string name="improve_any_areas_of_your_life">Reduce Stress and Anxiety</string>
    <string name="relieve_your_stress_and_anxiety">Achieve your Goals with Success</string>
    <string name="live_happier_and_boost_your_confidence">Live a happier Life and become more confident</string>
    <string name="try_7_days_for_free">Try 7 days for free</string>
    <string name="unlock_all_features">Get unlimited access now</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_are_now_subscribed_to_high_nenergy_mind_premium">You are now subscribed to\n HighEnergyMind Premium.</string>
    <string name="thank_you_for_trusting_us">Thank you for your trust.</string>
    <string name="get_started">Get Started</string>
    <string name="did_you_get_a_code_for_our_app_n_enter_it_here_to_get_started">Did you get a code for our app?\n Enter it here to get started.</string>
    <string name="don_t_have_a_code">Don\'t have a code?</string>
    <string name="recommend_highenergymind_to_your_friends_nand_we_will_gift_you_both_7_days_highenergymind">Recommend the HighEnergyMind app to your friends and we will give you both 7 days free access to HighEnergyMind Premium.</string>
    <string name="premium_access_for_free">Premium access for free</string>
    <string name="enter_the_code">Enter the Code</string>
    <string name="how_your_free_trial_nworks">How does your\n free trial work?</string>
    <string name="terms_and_conditions_privacy_policy_ndisclaimer_restore_purchase">Terms and Conditions | Privacy Policy\nDisclaimer | Restore Purchase</string>
    <string name="start_my_7_day_free_trial">Start my 7-day free trial</string>
    <string name="_7_day_free_trial_nthen_9_99_month">7-day free trial,\nthen %0$s /Month</string>
    <string name="_7_day_free_trial_n_then_79_99_year">7-day free trial,\n then %0$s /Year</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="select_photo">Select Photo</string>
    <string name="camera">Camera</string>
    <string name="photo_library">Photo Library</string>
</resources>