<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:background="@drawable/select_category"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:paddingBottom="@dimen/_20sdp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cateTV"
            style="@style/brandon_bold_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_16ssp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_26sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="center"
            android:padding="@dimen/_2sdp"
            android:text="@string/category"
            android:textColor="@color/content_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/contentTV"
            style="@style/brandon_bold_text_medium_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:textSize="@dimen/_13ssp"
            android:gravity="center"
            android:padding="@dimen/_2sdp"
            android:text="@string/select_at_least_one_category"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cateTV" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextBtn"
            style="@style/brandon_bold_button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/conti"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentTV" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>