<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_4sdp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_6sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/brandon_text_medium_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingVertical="@dimen/_11sdp"
                        android:text="@string/select_photo"
                        android:textColor="@color/bg_color_14"
                        android:textSize="@dimen/_11ssp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:alpha="0.3"
                        android:background="@color/gray_text_color" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvCamera"
                        style="@style/brandon_bold_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:gravity="center"
                        android:paddingVertical="@dimen/_13sdp"
                        android:text="@string/camera"
                        android:textColor="@color/bt_blue"
                        android:textSize="@dimen/_15ssp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:alpha="0.3"
                        android:background="@color/gray_text_color" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvPhoto"
                        style="@style/brandon_bold_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingVertical="@dimen/_13sdp"
                        android:text="@string/photo_library"
                        android:textColor="@color/bt_blue"
                        android:textSize="@dimen/_15ssp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/_6sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:strokeWidth="0dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvCancel"
                    style="@style/brandon_bold_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_13sdp"
                    android:text="@string/cancel"

                    android:textColor="@color/bt_blue"
                    android:textSize="@dimen/_15ssp" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>


    </RelativeLayout>
</layout>