<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_back_sc"
        tools:context=".view.activity.forgetpass.ForgotPasswordActivity">

        <include
            android:id="@+id/backBtn"
            layout="@layout/cutom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="parent"

            />

        <ImageView
            android:id="@+id/logoIMG"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:src="@drawable/group_lock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backBtn" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welComeTV"
            style="@style/brandon_bold_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/content_color"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoIMG" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/contentTV"
            style="@style/montserrat_medium_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/enter_your_email_you_will_receive_an_otp_for_creating_new_password"
            android:textColor="@color/bg_color_1"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welComeTV" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/emailTV"
            style="@style/brandon_text_medium_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/emial"
            android:textColor="@color/content_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentTV" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mailCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/edt_text_back"
            android:drawableStart="@drawable/lock"
            android:paddingHorizontal="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTV">

            <ImageView
                android:id="@+id/sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sms"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailEdt"
                style="@style/brandon_medium_edit_text_style"
                android:layout_width="0dp"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_7sdp"
                android:hint="@string/enter_your_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sms"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitBtn"
            style="@style/brandon_bold_button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_34sdp"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mailCL" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>