<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".view.fragment.continuesexplore.ContinueExploreFragment">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welComeTV"
            style="@style/brandon_bold_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/tell_us_what_brings_you_here"
            android:textColor="@color/content_color"
            android:textSize="@dimen/_19ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/contentTV"
            style="@style/brandon_bold_text_regular_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/select_a_category_that_matches_your_needs"
            android:textColor="@color/bg_color_2"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welComeTV" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoryRV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_9sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@id/contiBtn"
            android:layout_marginEnd="@dimen/_9sdp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentTV"
            app:spanCount="2"
            tools:listitem="@layout/items_explore" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/contiBtn"
            style="@style/brandon_bold_button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conti"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
